--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SSG Test</title>
+    <title>Varun K J</title>
 
     <link rel="stylesheet" href="css/main.css" />
     <link rel="shortcut icon" href="favicon.ico" />
@@ -32,15 +32,15 @@
       <!-- second page ABOUT ME -->
       <div id="two" class="ssg-page two">
         Page 2 content
-        <button id="left" onclick="ssg.revealLeft()">left</button>
+        <button id="left" onclick="ssg.revealLeft()">&#8592;</button>
         <!--PV PRODUCTIONS-->
-        <div class="ssg-child-left">
+        <div id="twoL" class="ssg-child-left">
           hidden content (left)
           <button onclick="ssg.conceal()">back</button>
         </div>
-        <button id="right" onclick="ssg.revealRight()">right</button>
+        <button id="right" onclick="ssg.revealRight()">&#8594;</button>
         <!--WORK EXPERIENCE-->
-        <div class="ssg-child-right">
+        <div id="twoR" class="ssg-child-right">
           hidden content (left)
           <button onclick="ssg.conceal()">back</button>
         </div>
