--- a/index.html
+++ b/index.html
@@ -73,14 +73,10 @@
       </div>
       </div>
 
-      
+
       <!--Contact Info-->
       <div id="four" class="ssg-page four">
-        Page 2 content
-        <button onclick="ssg.revealLeft()">left</button>
-        <div class="ssg-child-left">
-          hidden content (left)
-          <button onclick="ssg.conceal()">back</button>
+        <h1>CONTACT DETAILS</h1>
         </div>
       </div>
     </div>
