only four remains

--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
 
       <!-- second page ABOUT ME -->
       <div id="two" class="ssg-page two">
+        <div class="about">
+          <div class="imgwrap"><img src="images/varun.jpg" alt='me'/></div>
+          <h2>Hey there! I'm Varun.</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni exercitationem dolor, mollitia assumenda veritatis harum praesentium ipsum voluptates maiores suscipit tempore dolore. Suscipit numquam amet, odit debitis fuga praesentium esse.
+          </p>
+        </div>
         
         <button id="left" onclick="ssg.revealLeft()">&#8592;</button>
         <!--PV PRODUCTIONS-->
