--- a/jp.html
+++ b/jp.html
@@ -18,16 +18,16 @@
         <!-- first page NAME AND LINKS-->
         <div id="one" class="ssg-page one">
           <div class="dropdown" style="float:left;">
-            <button class="dropbtn">Select Language  &#8595;</button>
+            <button class="dropbtn">言語  &#8595;</button>
             <div class="dropdown-content" style="left:0;">
             <a href="index.html">English</a>
             <a href="jp.html">日本語</a>
             <a href="#">Sanskrit</a>
             </div>
           </div>
-          <h1>Varun K J</h1>
+          <h1>ケジェ ヴァルン</h1>
           <h2>
-            One guy for all your UI&UX solutions
+            ここで何を書けばいいのかわからん
           </h2>
           <a target="_blank" href="https://github.com/onigiriman7/"
             ><span
@@ -44,12 +44,9 @@
         <div id="two" class="ssg-page two">
           <div class="about">
             <div class="imgwrap"><img src="images/varun.jpg" alt="me" /></div>
-            <h2>Hey there! I'm Varun.</h2>
+            <h2>こんにちは！ヴァルンと申します。</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni
-              exercitationem dolor, mollitia assumenda veritatis harum
-              praesentium ipsum voluptates maiores suscipit tempore dolore.
-              Suscipit numquam amet, odit debitis fuga praesentium esse.
+              なんちゃらかんちゃらなんちゃらかんちゃら
             </p>
           </div>
 
@@ -66,7 +63,7 @@
           <button id="right" onclick="ssg.revealRight()">&#8594;</button>
           <!--WORK EXPERIENCE-->
           <div id="twoR" class="ssg-child-right">
-            <h1>WORK EXPERIENCE (TBU)</h1>
+            <h1>履歴(TBU)</h1>
             <button id="bL" onclick="ssg.conceal()">&#8592;</button>
           </div>
         </div>
@@ -74,8 +71,8 @@
         <!--ISOMETRIC CARD PROJECTS-->
         <div id="three" class="ssg-page three">
           <div id="main">
-            <div id="msg">SKILLS</div>
-            <div id="btn">LANGUAGES & FRAMEWORKS</div>
+            <div id="msg">技能</div>
+            <div id="btn">プログラミング言語</div>
 
             <div class="block b1">
               <img
@@ -125,7 +122,7 @@
 
         <!--Contact Info-->
         <div id="four" class="ssg-page four">
-          <h1>CONTACT DETAILS</h1>
+          <h1>連絡情報（TBU）</h1>
         </div>
       </div>
     </div>
