--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
         <!--Contact Info-->
         <div id="four" class="ssg-page four">
-          <h1>CONTACT DETAILS</h1>
+          <h1>Get in touch: lolol3737@gmail.com(doesn't exist)</h1>
         </div>
       </div>
     </div>
