--- a/jp.html
+++ b/jp.html
@@ -122,7 +122,7 @@
 
         <!--Contact Info-->
         <div id="four" class="ssg-page four">
-          <h1>連絡情報（TBU）</h1>
+          <h1>連絡情報（TBU）</h1><br/>
           <h1>Email：lolol3737@gmail.com（嘘）</h1>
         </div>
       </div>
