--- a/index.html
+++ b/index.html
@@ -47,9 +47,7 @@
             <h2>Hey there! I'm Varun.</h2>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni
-              exercitationem dolor, mollitia assumenda veritatis harum
-              praesentium ipsum voluptates maiores suscipit tempore dolore.
-              Suscipit numquam amet, odit debitis fuga praesentium esse.
+              exercitationem dolor
             </p>
           </div>
 
