--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/three.css" />
     <link rel="shortcut icon" href="favicon.ico" />
+    <link rel="stylesheet" href="css/four.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
   </head>
   <body>
@@ -123,7 +125,35 @@
 
         <!--Contact Info-->
         <div id="four" class="ssg-page four">
-          <h1>Get in touch:<br> lolol3737@gmail.com(doesn't exist)</h1>
+         
+          <div class="wrap"> <h1>Social Media</h1>
+          <ul>
+            <li>
+              <a target="_blank" href="#">
+                <i class="fa fa-facebook" aria-hidden="true"></i>
+                <span> - Facebook</span>
+              </a>
+            </li>
+            <li>
+              <a href="https://twitter.com/VarunKJ3" target="_blank">
+                <i class="fa fa-twitter" aria-hidden="true"></i>
+                <span> - Twitter</span>
+              </a>
+            </li>
+            <li>
+              <a target="_blank" href="https://www.youtube.com/channel/UC4fpkuPLnGUSmtF84sLK2lw?view_as=subscriber">
+                <i class="fa fa-youtube" aria-hidden="true"></i>
+                <span> - Youtube</span>
+              </a>
+            </li>
+            <li>
+              <a target="_blank" href="https://www.instagram.com/varun_karun_jarun/">
+                <i class="fa fa-instagram" aria-hidden="true"></i>
+                <span> - Instagram</span>
+              </a>
+            </li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
