--- a/jp.html
+++ b/jp.html
@@ -73,7 +73,7 @@
         <!--ISOMETRIC CARD PROJECTS-->
         <div id="three" class="ssg-page three">
           <div id="main">
-            <div id="msg">技能</div>
+            <div id="msg">技術</div>
             <div id="btn">プログラミング言語</div>
 
             <div class="block b1">
