--- a/jp.html
+++ b/jp.html
@@ -65,7 +65,7 @@
           <button id="right" onclick="ssg.revealRight()">&#8594;</button>
           <!--WORK EXPERIENCE-->
           <div id="twoR" class="ssg-child-right">
-            <h1>履歴(TBU)</h1>
+            <h1>経歴(TBU)</h1>
             <button id="bL" onclick="ssg.conceal()">&#8592;</button>
           </div>
         </div>
