--- a/jp.html
+++ b/jp.html
@@ -136,19 +136,19 @@
               </a>
             </li>
             <li>
-              <a href="" target="_blank">
+              <a href="https://twitter.com/VarunKJ3" target="_blank">
                 <i class="fa fa-twitter" aria-hidden="true"></i>
                 <span> - ツイッター</span>
               </a>
             </li>
             <li>
-              <a target="_blank" href="">
+              <a target="_blank" href="https://www.youtube.com/channel/UC4fpkuPLnGUSmtF84sLK2lw?view_as=subscriber">
                 <i class="fa fa-youtube" aria-hidden="true"></i>
                 <span> - ユーチューブ</span>
               </a>
             </li>
             <li>
-              <a target="_blank" href="">
+              <a target="_blank" href="https://www.instagram.com/varun_karun_jarun/">
                 <i class="fa fa-instagram" aria-hidden="true"></i>
                 <span> - インスタグラム</span>
               </a>
