--- a/index.html
+++ b/index.html
@@ -135,19 +135,19 @@
               </a>
             </li>
             <li>
-              <a href="" target="_blank">
+              <a href="https://twitter.com/VarunKJ3" target="_blank">
                 <i class="fa fa-twitter" aria-hidden="true"></i>
                 <span> - Twitter</span>
               </a>
             </li>
             <li>
-              <a target="_blank" href="">
+              <a target="_blank" href="https://www.youtube.com/channel/UC4fpkuPLnGUSmtF84sLK2lw?view_as=subscriber">
                 <i class="fa fa-youtube" aria-hidden="true"></i>
                 <span> - Youtube</span>
               </a>
             </li>
             <li>
-              <a target="_blank" href="">
+              <a target="_blank" href="https://www.instagram.com/varun_karun_jarun/">
                 <i class="fa fa-instagram" aria-hidden="true"></i>
                 <span> - Instagram</span>
               </a>
