--- a/jp.html
+++ b/jp.html
@@ -24,7 +24,8 @@
             <div class="dropdown-content" style="left:0;">
             <a href="index.html">English</a>
             <a href="jp.html">日本語</a>
-            <a href="#">Sanskrit</a>
+            <a href="/sankrit.html">संस्कृतम्
+            </a>
             </div>
           </div>
           <h1>ケジェ ヴァルン</h1>
