--- a/sankrit.html
+++ b/sankrit.html
@@ -20,7 +20,7 @@
         <!-- first page NAME AND LINKS-->
         <div id="one" class="ssg-page one">
           <div class="dropdown" style="float:left;">
-            <button class="dropbtn">Select Language  &#8595;</button>
+            <button class="dropbtn">भशा  &#8595;</button>
             <div class="dropdown-content" style="left:0;">
             <a href="index.html">English</a>
             <a href="jp.html">日本語</a>
@@ -28,9 +28,10 @@
             </a>
             </div>
           </div>
-          <h1>Varun K J</h1>
+          <h1>के जे वरुणः</h1>
           <h2>
-            One guy for all your UI&UX solutions
+            जालस्थलानां कृते किमपि वा भवतु अहं समर्थः अस्मि। 
+
           </h2>
           <a target="_blank" href="https://github.com/onigiriman7/"
             ><span
@@ -47,10 +48,11 @@
         <div id="two" class="ssg-page two">
           <div class="about">
             <div class="imgwrap"><img src="images/varun.jpg" alt="me" /></div>
-            <h2>Hey there! I'm Varun.</h2>
+            <h2>नमस्कारः ! वरुणः अस्मि !
+            </h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni
-              exercitationem dolor
+                अत्र मम जीवनं कृते एकं वक्यम् । 
+
             </p>
           </div>
 
@@ -67,7 +69,8 @@
           <button id="right" onclick="ssg.revealRight()">&#8594;</button>
           <!--WORK EXPERIENCE-->
           <div id="twoR" class="ssg-child-right">
-            <h1>WORK EXPERIENCE (TBU)</h1>
+            <h1>कार्य क्षेत्रे अनुभवः 
+                (TBU)</h1>
             <button id="bL" onclick="ssg.conceal()">&#8592;</button>
           </div>
         </div>
@@ -75,8 +78,11 @@
         <!--ISOMETRIC CARD PROJECTS-->
         <div id="three" class="ssg-page three">
           <div id="main">
-            <div id="msg">SKILLS</div>
-            <div id="btn">LANGUAGES & FRAMEWORKS</div>
+            <div id="msg" style="font-family: Arial, Helvetica, sans-serif !important;">कला-कौशलानि
+            </div>
+            <div id="btn">प्रोग्रमिङ्ग् भाषाः च
+
+            </div>
 
             <div class="block b1">
               <img
@@ -126,31 +132,34 @@
 
         <!--Contact Info-->
         <div id="four" class="ssg-page four">
-         
-          <div class="wrap"> <h1>Social Media</h1>
+          
+          <div class="wrap"><h1>अन्तर्जाले प्रसारमध्यमानि
+
+          </h1>
           <ul>
             <li>
               <a target="_blank" href="#">
                 <i class="fa fa-facebook" aria-hidden="true"></i>
-                <span> - Facebook</span>
+                <span> - फ़ेस्बुक्
+                </span>
               </a>
             </li>
             <li>
               <a href="https://twitter.com/VarunKJ3" target="_blank">
                 <i class="fa fa-twitter" aria-hidden="true"></i>
-                <span> - Twitter</span>
+                <span> - ट्विट्टर्</span>
               </a>
             </li>
             <li>
               <a target="_blank" href="https://www.youtube.com/channel/UC4fpkuPLnGUSmtF84sLK2lw?view_as=subscriber">
                 <i class="fa fa-youtube" aria-hidden="true"></i>
-                <span> - Youtube</span>
+                <span> - यूट्यूब्</span>
               </a>
             </li>
             <li>
               <a target="_blank" href="https://www.instagram.com/varun_karun_jarun/">
                 <i class="fa fa-instagram" aria-hidden="true"></i>
-                <span> - Instagram</span>
+                <span> - इन्स्टग्राम्</span>
               </a>
             </li>
             </ul>
@@ -161,4 +170,10 @@
     <script src="js/main.js"></script>
     <script src="js/ssg.js"></script>
   </body>
+  <style>
+      ul li a span{
+        letter-spacing: 0px !important;
+        font-size: 20px;
+      }
+  </style>
 </html>
