--- a/sankrit.html
+++ b/sankrit.html
@@ -51,7 +51,7 @@
             <h2>नमस्कारः ! वरुणः अस्मि !
             </h2>
             <p>
-                अत्र मम जीवनं कृते एकं वक्यम् । 
+                अत्र मम जीवनं कृते एकं वाक्यम् । 
 
             </p>
           </div>
@@ -78,7 +78,7 @@
         <!--ISOMETRIC CARD PROJECTS-->
         <div id="three" class="ssg-page three">
           <div id="main">
-            <div id="msg" style="font-family: Arial, Helvetica, sans-serif !important;">कला-कौशलानि
+            <div id="msg" style="font-family: Arial, Helvetica, sans-serif !important; font-size: 48px;">कला-कौशलानि
             </div>
             <div id="btn">प्रोग्रमिङ्ग् भाषाः च
 
@@ -133,7 +133,7 @@
         <!--Contact Info-->
         <div id="four" class="ssg-page four">
           
-          <div class="wrap"><h1>अन्तर्जाले प्रसारमध्यमानि
+          <div class="wrap"><h1>अन्तर्जाले प्रसारमाध्यमानि
 
           </h1>
           <ul>
